feat: persister les parcours locaux et les emails
